# cmake-python-build

./: CMakeLists.txt  README.md  Readme_OpenSSL.md  build.cmake  bzip2.cmake  expat.cmake  ffi.cmake  inform_prereq.cmake  libraries.json  libtool.cmake  lzma.cmake  options.cmake  python.cmake  python_msvc.cmake  readline.cmake  ssl.cmake  xz.cmake  zlib.cmake
cmake/: ExtProjAutotools.cmake  ExtProjCMake.cmake  FindAutotools.cmake  options.cmake
cmake/Modules/: FindAutotools.cmake
scripts/: install-python.cmake
